Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25570

Some Ctrl+F results not highlighted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.15.0
    • Qt Creator 4.14.2
    • Editors
    • None
    • Windows
    • 005f0a31274fa20ddf1ed68165175daa013718e1 (qt-creator/tqtc-qt-creator/4.15)

      If I search for

      QDEBUG : tst_App::rulersAndGuides(ImageType) 
      

      in

      QDEBUG : tst_App::rulersAndGuides(ImageType) app.canvas.events.hover: hoverMoveEvent: QPointF(50,30)
      QDEBUG : tst_App::rulersAndGuides(ImageType) app.canvas.cursorpos: updating cursor pos to QPoint(50,30)...
      QDEBUG : tst_App::rulersAndGuides(ImageType) app.canvas.cursorpos: ... updated cursor pos - mCursorX=50 mCursorY=30 mCursorPaneX=50 mCursorPaneY=30 mCursorSceneX=30 mCursorSceneY=10 mCursorSceneFX=30 mCursorSceneFY=10
      

      I get no highlighting in the code itself, even though the results are highlighted on the scroll bar.

      If I seach for a simple word like "app", the results are highlighted as expected.

      This worked in earlier versions.

      Qt Creator 4.14.2
      Based on Qt 5.15.2 (MSVC 2019, 64 bit)
      Built on Mar 19 2021 09:03:03
      From revision c34b950227
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes