TextEditor: Fix highlighting search results at block start

Fixes: QTCREATORBUG-25570
Change-Id: I3450cfed49e07cf96c2a2a9cdfa9a0be7a05c49f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>